Added Telegram Bot for modals ( ALL NEED TO "npm install" after marge! )

--- a/src/partials/extras.html
+++ b/src/partials/extras.html
@@ -3,3 +3,6 @@
   ><a href="#products" class="side-dotted-menu__item"><p>Our products</p></a
   ><a href="#contacts" class="side-dotted-menu__item"><p>Contact</p></a>
 </div>
+
+<!-- BUTTON SCROLL TO TOP OF SCREAN -->
+<button class="extras__scroll-to-top">Scroll To Top</button>
