--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,3 @@
-<!-- BUTTON SCROLL TO TOP OF SCREAN -->
-<button class="extras__scroll-to-top">Scroll To Top</button>
-
 <!-- -------------------- Buy now modal window -------------------- -->
 <div class="modal" data-modal="1">
   <button class="modal__button-close js-modal-close" data-modal-close>
@@ -184,7 +181,7 @@
       contact information below and we will reach out for additional
       information. We appreciate your patience.
     </p>
-    <form class="modal__form" name="modal-form" autocomplete="off">
+    <form class="modal__form email" name="modal-form" autocomplete="off">
       <label class="modal__input-label">
         <input
           class="modal__form-input modal__input-div"
