add-padding-and-alt-name-img, bgi-2x

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -79,7 +79,7 @@
           <img
             class="item__icecream-mob"
             src="./images/hero/ice-cream-mobile-1x.png"
-            alt=""
+            alt="ice-cream"
             width=""
           />
         </picture>
@@ -279,7 +279,11 @@
         "
         media="(min-width:768px)"
       />
-      <img src="./images/hero/plate-tablet-1x.png" alt="" width="" />
+      <img
+        src="./images/hero/plate-tablet-1x.png"
+        alt="plate with ice cream"
+        width=""
+      />
     </picture>
     <p class="about-icecream">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
