update index, modal, advantages

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -573,7 +573,7 @@
 
 <!-- ----------test buttons--------------- -->
 
-<div class="test-buttons">
+<!-- <div class="test-buttons">
   <button class="js-open-modal main-button" data-modal="1">
     TEST BUTTON - BUY NOW - ВСТАВТЕ В КНОПКУ data-modal="1"
   </button>
@@ -595,4 +595,4 @@
   <button class="js-open-modal main-button" data-modal="7">
     TEST BUTTON - milkshakes - ВСТАВТЕ В КНОПКУ data-modal="7"
   </button>
-</div>
+</div> -->
