upd header and buttons

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<section class="header" id="header">
+<header class="header" id="header">
   <div class="container">
-    <logo class="logo">
+    <a href="#header" class="logo">
       <picture>
         <source
           srcset="
@@ -28,12 +28,10 @@
           src="./images/header/logo-desktop-1x.png"
           alt="морозиво"
           width="60"
-          ;
           height="65"
-          ;
         />
       </picture>
-    </logo>
+    </a>
     <nav class="nav">
       <ul class="list">
         <li class="item">
@@ -46,11 +44,7 @@
           <a href="#products" class="link">Our products</a>
         </li>
         <li class="item">
-<<<<<<< HEAD
-          <a href="#contact" class="link">Contact</a>
-=======
           <a href="#contacts" class="link">Contact</a>
->>>>>>> main
         </li>
       </ul>
     </nav>
@@ -68,4 +62,4 @@
       </button>
     </div>
   </div>
-</section>
+</header>
