--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -46,7 +46,7 @@
     background-color: $white-text-color;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
-    width: calc(100% - 20px);
+    width: 100%;
     @include tablet {
         padding-left: 24px;
         padding-right: 24px;
