--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="container">
     <div class="hero__top">
-      <div>
+      <div data-aos="fade-right" data-aos-duration="500">
         <h1 class="hero__title">
           ice cream made with <span class="pos">passion</span>
         </h1>
@@ -14,7 +14,7 @@
           </li>
         </ul>
       </div>
-      <div class="cafe">
+      <div data-aos="fade-left" data-aos-duration="500" class="cafe">
         <ul class="cafe-track list">
           <li>
             <p>16</p>
@@ -85,7 +85,12 @@
         </picture>
       </li>
       <li class="list__face">
-        <picture>
+        <picture
+          data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="700"
+          data-aos-offset="0"
+        >
           <source
             srcset="
               ./images/hero/ice-face-desktop-1-1x.webp 1x,
@@ -139,7 +144,12 @@
         </picture>
       </li>
       <li class="list__face">
-        <picture>
+        <picture
+          data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="700"
+          data-aos-offset="0"
+        >
           <source
             srcset="
               ./images/hero/ice-face-desktop-2-1x.webp 1x,
@@ -193,7 +203,12 @@
         </picture>
       </li>
       <li class="list__face">
-        <picture>
+        <picture
+          data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="700"
+          data-aos-offset="0"
+        >
           <source
             srcset="
               ./images/hero/ice-face-desktop-3-1x.webp 1x,
@@ -285,7 +300,13 @@
         width=""
       />
     </picture>
-    <p class="about-icecream">
+    <p
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-back"
+      data-aos-delay="300"
+      data-aos-offset="0"
+      class="about-icecream"
+    >
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et
       <a href="#" class="arrow">
