--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -217,6 +217,19 @@
       position: absolute;
       bottom: -11;
       left: 32;
+      animation-name: rotation;
+      animation-duration: 5s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+
+      @keyframes rotation {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
       @include desktop {
         left: 17;
         bottom: -38;
