delete-width-img-hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -80,7 +80,6 @@
             class="item__icecream-mob"
             src="./images/hero/ice-cream-mobile-1x.png"
             alt="ice-cream"
-            width=""
           />
         </picture>
       </li>
@@ -136,11 +135,7 @@
             "
             media="(max-width:767px)"
           />
-          <img
-            src="./images/hero/ice-face-mob-1-1x.png"
-            alt="ice-cream-face"
-            width=""
-          />
+          <img src="./images/hero/ice-face-mob-1-1x.png" alt="ice-cream-face" />
         </picture>
       </li>
       <li class="list__face">
@@ -195,11 +190,7 @@
             "
             media="(max-width:767px)"
           />
-          <img
-            src="./images/hero/ice-face-mob-2-1x.png"
-            alt="ice-cream-face"
-            width=""
-          />
+          <img src="./images/hero/ice-face-mob-2-1x.png" alt="ice-cream-face" />
         </picture>
       </li>
       <li class="list__face">
@@ -254,11 +245,7 @@
             "
             media="(max-width:767px)"
           />
-          <img
-            src="./images/hero/ice-face-mob-3-1x.png"
-            alt="ice-cream-face"
-            width=""
-          />
+          <img src="./images/hero/ice-face-mob-3-1x.png" alt="ice-cream-face" />
         </picture>
       </li>
     </ul>
@@ -294,11 +281,7 @@
         "
         media="(min-width:768px)"
       />
-      <img
-        src="./images/hero/plate-tablet-1x.png"
-        alt="plate with ice cream"
-        width=""
-      />
+      <img src="./images/hero/plate-tablet-1x.png" alt="plate with ice cream" />
     </picture>
     <p
       data-aos="fade-zoom-in"
