upd swiper, products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -81,7 +81,7 @@
             </svg>
           </button>
           </div>
-          
+        </div>
       </li>
       <li class="products__card products__card--ice-coffee">
         <picture>
@@ -160,7 +160,7 @@
             </svg>
           </button>
           </div>
-          
+        </div>
       </li>
       <li class="products__card products__card--milkshakes">
         <picture>
@@ -239,6 +239,8 @@
             </svg>
           </button>
           </div>
+        </div>
       </li>
     </ul>
+    </div>
 </section>
