--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section class="gallery section">
   <div class="container">
     <h2 class="visually-hidden">Gallery</h2>
     <div class="swiper-gallery" id="swiper-gallery">
@@ -247,4 +247,3 @@
     </div>
   </div>
 </section>
-
