--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  width: 100%;
+  max-width: 100%;
   background-image: linear-gradient(to bottom, $main-bg-color 31%, rgba(255, 255, 255, 0.014) 31%);
 
   @include tablet {
@@ -12,31 +12,29 @@
 }
 
 .gallery__img {
+  
   margin: 0 auto;
   border-radius: 7.40681px;
-  min-width: 100%;
-  max-height: 130px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
   @include tablet {
-    max-height: 327px;
-    max-width: 100%;
+    max-width: 704px;
     border-radius: 18px;
-  }
+    }
 
   @include desktop {
-    max-height: 422px;
     border-radius: 24px;
+    max-width: 1013px;
   }
 }
-
-.slick-dots li button {
-  display: none;
-}
-
-.slick-dotted.slick-slider {
-  margin-bottom: 0px;
-}
-
-.swiper-gallary {
-  width: 100%;
+.swiper-gallery {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
 }
