--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,8 +2,8 @@
   <div class="container">
     <p class="products__pre-title">100% natural</p>
     <h2 class="products__title">products</h2>
-    <div class="products__cards">
-      <div class="products__card">
+    <ul class="products__cards">
+      <li class="products__card">
         <picture>
           <source
             srcset="
@@ -12,7 +12,6 @@
             "
             media="(min-width:1200px)"
             type="image/webp"
-
           />
           <source
             srcset="
@@ -86,13 +85,8 @@
             </button>
           </div>
         </div>
-<<<<<<< HEAD
-      </div>
-      <div class="products__card">
-=======
       </li>
       <li class="products__card products__card--ice-coffee">
->>>>>>> main
         <picture>
           <source
             srcset="
@@ -174,14 +168,8 @@
             </button>
           </div>
         </div>
-<<<<<<< HEAD
-      </div>
-
-      <div class="products__card products__card--milkshakes">
-=======
       </li>
       <li class="products__card products__card--milkshakes">
->>>>>>> main
         <picture>
           <source
             srcset="
@@ -263,13 +251,7 @@
             </button>
           </div>
         </div>
-<<<<<<< HEAD
-      </div>
-    </div>
-  </div>
-=======
       </li>
     </ul>
-    </div>
->>>>>>> main
+  </div>
 </section>
