finish-update-mob-menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -33,13 +33,13 @@
           ;
         /> </picture
     ></a>
-    <button type="button" class="menu-btn menu-btn--close" data-menu-close>
+    <button type="button" class="menu-btn menu-btn--close" data-menu-close-mob>
       <svg class="menu-btn__icon" width="32px" height="32px">
         <use href="./images/symbol-defs.svg#icon-btn-menu-close"></use>
       </svg>
     </button>
     <nav class="mob-menu__navigation">
-      <ul class="mob-menu__list list">
+      <ul class="mob-menu-list mob-menu__list list">
         <li class="mob-menu__item">
           <a
             href="./index.html"
@@ -48,13 +48,13 @@
           >
         </li>
         <li class="mob-menu__item">
-          <a href="#" class="link mob-menu__link">How it’s made?</a>
+          <a href="#about" class="link mob-menu__link">How it’s made?</a>
         </li>
         <li class="mob-menu__item">
-          <a href="#" class="link mob-menu__link">Our products</a>
+          <a href="#products" class="link mob-menu__link">Our products</a>
         </li>
         <li class="mob-menu__item">
-          <a href="#" class="link mob-menu__link">Contact</a>
+          <a href="#contacts" class="link mob-menu__link">Contact</a>
         </li>
       </ul>
     </nav>
