--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,6 @@
             "
             media="(min-width:1200px)"
             type="image/webp"
-
           />
           <source
             srcset="
@@ -64,22 +63,20 @@
           <h3 class="card__title">ice cream</h3>
           <div class="card__box">
             <p class="card__text">
-            Soft ice cream with a delicate taste. Made with milk, cream, sugar
-            and natural stabilizer
-          </p>
-          <button class="card__button js-open-modal" type="button" data-modal="5" aria-label="ingregients">
-            <svg
-              class="button-icon"
-              width="42"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+              Soft ice cream with a delicate taste. Made with milk, cream, sugar
+              and natural stabilizer
+            </p>
+            <button
+              class="card__button js-open-modal"
+              type="button"
+              data-modal="5"
+              aria-label="ingregients"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg class="button-icon" width="40" height="16">
+          <use href="./images/symbol-defs.svg#icon-Arrow-1"></use>
+        </svg>
+              </svg>
+            </button>
           </div>
         </div>
       </li>
@@ -143,22 +140,19 @@
           <h3 class="card__title">ice coffee</h3>
           <div class="card__box">
             <p class="card__text">
-            Fragrant invigorating drink created from 100% natural ingredients
-            without the use of preservatives and flavor enhancers
-          </p>
-          <button class="card__button js-open-modal" type="button" data-modal="6" aria-label="ingregients">
-            <svg
-              class="button-icon"
-              width="40"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+              Fragrant invigorating drink created from 100% natural ingredients
+              without the use of preservatives and flavor enhancers
+            </p>
+            <button
+              class="card__button js-open-modal"
+              type="button"
+              data-modal="6"
+              aria-label="ingregients"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg class="button-icon" width="40" height="16">
+                <use href="./images/symbol-defs.svg#icon-Arrow-1"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </li>
@@ -222,25 +216,22 @@
           <h3 class="card__title">milkshakes</h3>
           <div class="card__box">
             <p class="card__text">
-            Sweet drinks based on milk and ice cream, supplemented with syrups,
-            fruits, berries and other sweets of your choice
-          </p>
-          <button class="card__button js-open-modal" type="button" data-modal="7" aria-label="ingregients">
-            <svg
-              class="button-icon"
-              width="40"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+              Sweet drinks based on milk and ice cream, supplemented with
+              syrups, fruits, berries and other sweets of your choice
+            </p>
+            <button
+              class="card__button js-open-modal"
+              type="button"
+              data-modal="7"
+              aria-label="ingregients"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg class="button-icon" width="40" height="16">
+                <use href="./images/symbol-defs.svg#icon-Arrow-1"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </li>
     </ul>
-    </div>
+  </div>
 </section>
