--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -54,7 +54,7 @@
           <use href="./images/header/icon.svg#icon-menu-open"></use>
         </svg>
       </button>
-      <button type="button" class="main-button">
+      <button type="button" class="main-button js-open-modal" data-modal="1">
         <span class="main-button-title">Buy now</span>
         <svg class="icon-btn-after" width="12" height="12">
           <use href="./images/header/icon.svg#icon-btn-after"></use>
