--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section reviews">
   <div class="container">
     <div class="swiper" id="swiper">
       <!-- Additional required wrapper -->
