--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,5 +1,9 @@
 .about {
-  background-color: $main-bg-color
+  background-color: $main-bg-color;
+  padding-bottom: 43px;
+  @include tablet {
+    padding-bottom: 48px;
+  }
 }
 
 .about-pre-title {
@@ -132,7 +136,6 @@
 }
 .about-button {
   margin-top: 20px;
-  margin-bottom: 42px;
   margin-left: auto;
   margin-right: auto;
   gap: 5px;
