--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,9 +1,11 @@
 <section class="about section" id="about">
   <div class="container">
-    <p class="about-pre-title">tradition and love</p>
-    <h2 class="about-title">how it's made?</h2>
+    <p class="about-pre-title" data-aos="fade-down" data-aos-delay="200">
+      tradition and love
+    </p>
+    <h2 class="about-title" data-aos="fade-up">how it's made?</h2>
     <div class="about-content">
-      <div class="about-picture">
+      <div class="about-picture" data-aos="fade-up-right">
         <div class="about-cow">
           <picture>
             <source
@@ -37,7 +39,7 @@
           </picture>
         </div>
       </div>
-      <div class="about-text-container">
+      <div class="about-text-container" data-aos="fade-up-left">
         <ul class="about-list list">
           <li class="about-item">
             <p class="about-text">
