--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,21 +2,21 @@
   <div class="container">
     <h2 class="visually-hidden">Our advantages</h2>
     <ul class="advantages-list list">
-      <li class="advantages-item">
-        <p class="amount">721</p>
-        <p class="advantages-paragraph">
+      <li class="advantages-item" data-aos="fade-up">
+        <p class="amount" data-aos="fade-up-right" data-aos-delay="200">721</p>
+        <p class="advantages-paragraph" data-aos="fade-up-right">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advantages-item">
-        <p class="amount">16kg</p>
-        <p class="advantages-paragraph">
+      <li class="advantages-item" data-aos="fade-up">
+        <p class="amount" data-aos="fade-up" data-aos-delay="200">16kg</p>
+        <p class="advantages-paragraph" data-aos="fade-up">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advantages-item">
-        <p class="amount">84</p>
-        <p class="advantages-paragraph">
+      <li class="advantages-item" data-aos="fade-up">
+        <p class="amount" data-aos="fade-up-left" data-aos-delay="200">84</p>
+        <p class="advantages-paragraph" data-aos="fade-up-left">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
