--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section class="section contacts" id="contacts">
   <div class="container">
     <h2 class="visually-hidden">Contacts</h2>
-    <ul class="contacts__list list">
+    <ul class="contacts__list list" data-aos="fade-up">
       <li class="contacts__item">
         <div class="contacts__address">
           <p class="contacts__type">CAFE</p>
@@ -114,7 +114,7 @@
         </ul>
       </li>
     </ul>
-    <div class="contacts__buttons">
+    <div class="contacts__buttons" data-aos="fade-up">
       <button type="button" class="js-open-modal main-button" data-modal="3">
         Our Locations
         <svg class="contacts__svg" width="12" height="12">
