--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,12 @@
 <section class="gallery section">
   <div class="container">
     <h2 class="visually-hidden">Gallery</h2>
-    <div class="swiper-gallery" id="swiper-gallery">
+    <div
+      class="swiper-gallery"
+      id="swiper-gallery"
+      data-aos="fade-up"
+      data-aos-delay="400"
+    >
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <picture>
