--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,9 +1,9 @@
 <section class="section products" id="products">
   <div class="container">
-    <p class="products__pre-title">100% natural</p>
-    <h2 class="products__title">products</h2>
+    <p class="products__pre-title" data-aos="fade-down" data-aos-delay="200">100% natural</p>
+    <h2 class="products__title" data-aos="fade-up">products</h2>
     <ul class="products__cards">
-      <li class="products__card products__card--ice-cream">
+      <li class="products__card products__card--ice-cream" data-aos="fade-up-right" data-aos-delay="200">
         <picture>
           <source
             srcset="
@@ -80,7 +80,7 @@
           </div>
         </div>
       </li>
-      <li class="products__card products__card--ice-coffee">
+      <li class="products__card products__card--ice-coffee" data-aos="fade-up">
         <picture>
           <source
             srcset="
@@ -156,7 +156,7 @@
           </div>
         </div>
       </li>
-      <li class="products__card products__card--milkshakes">
+      <li class="products__card products__card--milkshakes" data-aos="fade-up-left"data-aos-delay="200">
         <picture>
           <source
             srcset="
