--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="swiper" id="swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <div class="swiper-wrapper" data-aos="up" data-aos-delay="400">
         <!-- Slides -->
         <div class="swiper-slide">
           <picture>
