--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="container box">
-    <div class="title">
+    <div class="title" data-aos="fade-up-right">
       <p class="text__made">homemade ice cream made</p>
       <p class="text__passion">with passion</p>
     </div>
-    <div class="contact-soc">
+    <div class="contact-soc" data-aos="fade-left">
       <ul class="soc list">
         <li class="soc__item">
           <a
@@ -52,7 +52,7 @@
       </p>
     </div>
   </div>
-  <div class="license-box">
+  <div class="license-box" ></div>></div>
     <p class="license">© 2022 - IceCream. All Rights Reserved</p>
   </div>
 </footer>
