--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -89,7 +89,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="main-button" type="submit">submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
@@ -223,7 +223,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="main-button" type="submit">submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
@@ -336,7 +336,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="main-button" type="submit">submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
@@ -449,7 +449,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="main-button" type="submit">submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
@@ -562,7 +562,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="main-button" type="submit">submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
