--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,6 @@
 <section class="section reviews">
   <div class="container">
+    <h2 class="visually-hidden">Customer reviews</h2>
     <div class="swiper" id="swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper" data-aos="up" data-aos-delay="400">
