--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -52,7 +52,7 @@
       </p>
     </div>
   </div>
-  <div class="license-box" ></div>></div>
+  <div class="license-box" ></div></div>
     <p class="license">© 2022 - IceCream. All Rights Reserved</p>
   </div>
 </footer>
