upd modal frames

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -112,10 +112,9 @@
       style="padding: 56.25% 0 0 0; position: relative"
     >
       <iframe
+      class="vimeo"
         id="vimeo-player"
         src="https://player.vimeo.com/video/76384528?h=07c04c4a14&color=0A8817"
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
-        frameborder="0"
         allow="autoplay; fullscreen; picture-in-picture"
         allowfullscreen
       ></iframe>
@@ -144,9 +143,8 @@
 
     <div class="modal__our-location-map">
       <iframe
+        class="google"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.8663399464604!2d30.531895015614868!3d50.42496187947188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2sGoIT!5e0!3m2!1sru!2sua!4v1663583211924!5m2!1sru!2sua"
-        width="100%"
-        height="260px"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
