--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -135,6 +135,17 @@
     position: absolute;
     filter: drop-shadow(0 0 3.75rem rgba(252, 252, 252, 0.44));
     z-index: 1;
+    animation-name: animation;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    @keyframes animation {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
     @media screen and (min-width: 300px) and (max-width: 767px) {
       bottom: -239;
       left: 50%;
