--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,7 +49,12 @@
       </ul>
     </nav>
     <div class="position">
-      <button type="button" class="menu-btn menu-btn--open" data-menu-open>
+      <button
+        type="button"
+        class="menu-btn menu-btn--open"
+        data-menu-open
+        aria-label="menu open button"
+      >
         <svg class="menu-btn__icon" width="32" height="32">
           <use href="./images/header/icon.svg#icon-menu-open"></use>
         </svg>
